# financial

./: .gitignore  README.md  alembic.ini  pyproject.toml  setup.py
alembic/: README  README.md  env.py
alembic/versions/: 07ddbe6c2163_add_clearing_transactions.py  122f99dd92c8_add_adjustments_table.py  122f99dd92c8_alter_clearing_transactions.py  14dab5a38d65_add_calculated_value_on_transactions.py  36c03bac0ff2_add_transactions_categories_table.py  6db917175025_setup.py  7abeabf21d60_add_original_value_on_transaction.py  8125e4ad45a7_alter_original_hash_nullable_false.py  9f35b5a74254_add_sector_on_categories_table.py  d4033443b009_add_inter_transactions_table.py  e7317f182518_add_hash_on_inter_transaction.py
financial/: app.py  base_transactions_importer.py  category.py  category_rule.py  cli.py  dashboard.py  db.py  inter_transactions_importer.py  main.py  normalize_error.py  poc_dashboard.py  transaction.py
financial/dash_board/: app.py  poc_dashboard.py
financial/entities/: adjustement.py  category.py  category_rule.py  category_rule_conflict_error.py  db.py  inter_transaction.py  normalization_error.py  transaction.py  transactions_categories.py  user.py
financial/inter/: data_frame.py  transactions_importer.py
tests/: conftest.py  test_import.csv  test_import_adjustment.csv  test_integration.py  test_inter_transactions_importer.py
tests/entities/: test_adjustment.py  test_category_rule.py  test_inter_transaction.py  test_transaction.py  test_transactions_categories.py
tests/inter/: test_data_frame.py  test_transactions_importer.py
(+4 files in other folders)
