[tool.poetry]
name = "financial"
version = "0.1.0"
description = ""
authors = ["Carlos Henrique Beralde (Caique) <henrique.beralde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
sqlalchemy = "^1.4.42"
pymysql = "^1.0.2"
cryptography = "^38.0.1"
click = "^8.1.3"
click-repl = "^0.2.0"
alembic = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
